---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Tried fixing a common crash related to multiplayer latency (#219)
    - Fixed a crash when trying to confirm a decimal beacon amount by way of a mathematical expression
    - Fixed a crash when changing to a machine that uses fluid fuels

---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 28. 10. 2024
  Bugfixes:
    - Fixed a startup crash when using certain very powerful fuels
    - Fixed an issue where certain fuel categories would be duplicated internally
    - Fixed a crash when using mods to hide content until you've discovered it (#377)
    - Fixed a crash in multiplayer when closing a modal dialog (#360)

---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 27. 10. 2024
  Bugfixes:
    - Fixed that manually setting a recipe productivity of 0 would not work (#364) (Thanks Dutch0903!)
    - Fixed a crash when opening the districts view on a migrated save (#369)
    - Fixed a crash when trying to reset a machine while the matrix solver is active (#374)
    - Fixed a crash when setting a machine limit on recipes that don't calculate a machine amount (#354)
    - Fixed an issue where deleting the last recipe on a subfloor would show recipes from the floor above (#368)
    - Fixed a crash when opening the machine dialog for a machine that uses fluid fuels
    - Fixed that entering a decimal beacon amount would crash
    - Fixed a couple of migration-related crashes
    - Fixed that compatible module detection would not always work properly

---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 22. 10. 2024
  Changes: